argo/ctfnote/templates/pad-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ctfnote-pad-strip-prefix
  namespace: ctfnote
spec:
  stripPrefix:
    prefixes:
      - /pad
