argo/ctfnote/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_MULTIPLE_DATABASES
              value: hedgedoc
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ctfnote-secrets
                  key: db-user-password
            - name: POSTGRES_USER
              value: ctfnote
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: ghcr.io/tfns/ctfnote/db:latest
          name: db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: ctfnote-db
      restartPolicy: Always
      volumes:
        - name: ctfnote-db
          persistentVolumeClaim:
            claimName: ctfnote-db
