argo/ctfnote/templates/hedgedoc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: hedgedoc
  name: hedgedoc
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: hedgedoc
